maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:41: error: '=' expected but ';' found.
  setDirection(ancienneDir)
^